implemented rectangular borders, refactor user data synchronization system and other fixes